--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.19.1
   firebase_messaging: ^11.4.4
+  flutter_local_notifications: 
 
 
 dev_dependencies:
