--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/riddhasoft/Documents/development/flutter
-FLUTTER_APPLICATION_PATH=/Users/riddhasoft/Documents/projects/firebase_fcm
+FLUTTER_ROOT=C:\flutter
+FLUTTER_APPLICATION_PATH=D:\projects\firebase-fcm-ios-android
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
