--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.19.2
   firebase_messaging: ^11.4.4
   flutter_local_notifications: 
+  url_launcher:
 
 
 dev_dependencies:
